@@ -2,18 +2,21 @@ Manifest-Version: 1.0
 Ant-Version: Apache Ant 1.7.1
 Created-By: 14.3-b01-101 (Apple Inc.)
 Main-Class: au.com.BI.Admin.eLife_monitor
-Class-Path: ../ext/bin ../ext/slf4j-jdk14-1.5.6.jar ../ext/slf4j-api-1
- .5.6.jar ../ext/webdav-servlet-2.0.jar ../ext/xml-apis.jar ../ext/jdo
- m.jar ../ext/xalan.jar ../ext/jetty-ajp-7.0.1.v20091125.jar ../ext/je
- tty-annotations-7.0.1.v20091125.jar ../ext/jetty-client-7.0.1.v200911
- 25.jar ../ext/jetty-continuation-7.0.1.v20091125.jar ../ext/jetty-dep
- loy-7.0.1.v20091125.jar ../ext/jetty-http-7.0.1.v20091125.jar ../ext/
- jetty-io-7.0.1.v20091125.jar ../ext/jetty-plus-7.0.1.v20091125.jar ..
- /ext/jetty-policy-7.0.1.v20091125.jar ../ext/jetty-rewrite-7.0.1.v200
- 91125.jar ../ext/jetty-security-7.0.1.v20091125.jar ../ext/jetty-serv
- er-7.0.1.v20091125.jar ../ext/jetty-servlet-7.0.1.v20091125.jar ../ex
- t/jetty-servlets-7.0.1.v20091125.jar ../ext/jetty-util-7.0.1.v2009112
- 5.jar ../ext/jetty-webapp-7.0.1.v20091125.jar ../ext/jetty-websocket-
- 7.0.1.v20091125.jar ../ext/jetty-xml-7.0.1.v20091125.jar ../ext/servl
- et-api-2.5.jar
+Class-Path: ../monitor_ext/bin ../monitor_ext/slf4j-jdk14-1.5.6.jar ..
+ /monitor_ext/slf4j-api-1.5.6.jar ../monitor_ext/webdav-servlet-2.0.ja
+ r ../monitor_ext/xml-apis.jar ../monitor_ext/jdom.jar ../monitor_ext/
+ xalan.jar ../monitor_ext/jetty-ajp-7.0.1.v20091125.jar ../monitor_ext
+ /jetty-annotations-7.0.1.v20091125.jar ../monitor_ext/jetty-client-7.
+ 0.1.v20091125.jar ../monitor_ext/jetty-continuation-7.0.1.v20091125.j
+ ar ../monitor_ext/jetty-deploy-7.0.1.v20091125.jar ../monitor_ext/jet
+ ty-http-7.0.1.v20091125.jar ../monitor_ext/jetty-io-7.0.1.v20091125.j
+ ar ../monitor_ext/jetty-plus-7.0.1.v20091125.jar ../monitor_ext/jetty
+ -policy-7.0.1.v20091125.jar ../monitor_ext/jetty-rewrite-7.0.1.v20091
+ 125.jar ../monitor_ext/jetty-security-7.0.1.v20091125.jar ../monitor_
+ ext/jetty-server-7.0.1.v20091125.jar ../monitor_ext/jetty-servlet-7.0
+ .1.v20091125.jar ../monitor_ext/jetty-servlets-7.0.1.v20091125.jar ..
+ /monitor_ext/jetty-util-7.0.1.v20091125.jar ../monitor_ext/jetty-weba
+ pp-7.0.1.v20091125.jar ../monitor_ext/jetty-websocket-7.0.1.v20091125
+ .jar ../monitor_ext/jetty-xml-7.0.1.v20091125.jar ../monitor_ext/serv
+ let-api-2.5.jar
 
