@@ -1,7 +1,7 @@
-#Tue Mar 16 22:40:48 EST 2010
+#Wed Mar 17 12:58:42 EST 2010
 major_version=2
 datafiles=../eLife_server/datafiles
-minor_version=2
+minor_version=3
 port=8082
 eSmart_install=../
 web_base=../monitor_web
