@@ -1,3 +1,9 @@
+== 2010/03/17 ==
+Added libs to the distribution zip, changed references from /ext to /monitor_ext to allow parallel isntallation
+with eLife server.
+
+Released [attachment:wiki:SoftwareReleases:eLife_monitor_2.2.zip V2.2] 
+
 == 2010/03/16 ==
 Add a property for datafiles location
 eg.  -DeSmart_install="../eLife_Server" -Dmonitor_web="./monitor_web" -Ddatafiles="../eLife_Server/datafiles"
